fix(doc): modify logo and title

--- a/web/src/index.html
+++ b/web/src/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <meta charset="UTF-8">
-  <title>FALCON-NG</title>
+  <title>Nightingale</title>
 </head>
 <body>
   <div id="react-content"></div>
